// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Binary first, then Library |  Binary build, deployment with PRISMA_FORCE_NAPI=true and PRISMA_QUERY_ENGINE_LIBRARY, uses default binary for build, supplied library later: ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query-engine-windows.exe",
  "schema.prisma",
]
`;

exports[`Binary first, then Library |  Binary build, deployment with PRISMA_FORCE_NAPI=true and PRISMA_QUERY_ENGINE_LIBRARY, uses default binary for build, supplied library later: ./node_modules/.prisma/client @ 1 - after_env_change 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query-engine-windows.exe",
  "schema.prisma",
]
`;

exports[`Binary first, then Library |  Binary build, deployment with PRISMA_FORCE_NAPI=true and PRISMA_QUERY_ENGINE_LIBRARY, uses default binary for build, supplied library later: ./node_modules/@prisma/engines 1`] = `
Array [
  "dist",
  "download",
  "introspection-engine-windows.exe",
  "migration-engine-windows.exe",
  "node_modules",
  "package.json",
  "prisma-fmt-windows.exe",
  "query-engine-windows.exe",
  "README.md",
]
`;

exports[`Binary first, then Library |  Binary build, deployment with PRISMA_FORCE_NAPI=true and PRISMA_QUERY_ENGINE_LIBRARY, uses default binary for build, supplied library later: ./node_modules/prisma 1`] = `
Array [
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "query-engine-windows.exe",
  "README.md",
  "scripts",
]
`;

exports[`Binary first, then Library |  Binary build, deployment with PRISMA_FORCE_NAPI=true and PRISMA_QUERY_ENGINE_LIBRARY, uses default binary for build, supplied library later: version output @ 0 - env 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
Query Engine          : placeholder (at node_modules\\\\@prisma\\\\engines\\\\query-engine-windows.exe)
Migration Engine      : placeholder (at node_modules\\\\@prisma\\\\engines\\\\migration-engine-windows.exe)
Introspection Engine  : placeholder (at node_modules\\\\@prisma\\\\engines\\\\introspection-engine-windows.exe)
Format Binary         : placeholder (at node_modules\\\\@prisma\\\\engines\\\\prisma-fmt-windows.exe)
Default Engines Hash  : placeholder 
Studio                : placeholder "
`;

exports[`Binary first, then Library |  Binary build, deployment with PRISMA_FORCE_NAPI=true and PRISMA_QUERY_ENGINE_LIBRARY, uses default binary for build, supplied library later: version output @ 1 - after_env_change 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
N-API Query Engine    : placeholder (at custom-engines\\\\library\\\\Windows_NT\\\\query_engine-windows.dll.node, resolved by PRISMA_QUERY_ENGINE_LIBRARY)
Migration Engine      : placeholder (at node_modules\\\\@prisma\\\\engines\\\\migration-engine-windows.exe)
Introspection Engine  : placeholder (at node_modules\\\\@prisma\\\\engines\\\\introspection-engine-windows.exe)
Format Binary         : placeholder (at node_modules\\\\@prisma\\\\engines\\\\prisma-fmt-windows.exe)
Default Engines Hash  : placeholder 
Studio                : placeholder "
`;
